--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -1,7 +1,9 @@
-$very-dark-grey: #1C2020;
-$dark-grey: #464E51;
+$very-dark-grey: #1c2020;
+$dark-grey: #464e51;
 $light-grey: #ececec;
-$pink: #FAEEE9;
+$pink: #faeee9;
 $shadow: #555;
-$white: #FFFFFF;
+$white: #ffffff;
 $black: #000000;
+$primary-brown: #69290a;
+$primary-pink: #e94a72;
