--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -1,9 +1,14 @@
 @font-face {
-    font-family: Handletters;
-    src: url(../fonts/handletters/Handletters.otf);
-  }
+  font-family: Handletters;
+  src: url(../fonts/handletters/Handletters.otf);
+}
 
 @font-face {
-    font-family: Moontime;
-    src: url(../fonts/MoonTime-Regular.otf);
+  font-family: Moontime;
+  src: url(../fonts/MoonTime-Regular.otf);
+}
+
+@font-face {
+  font-family: Sansation;
+  src: url(../../fonts/Sansation-Bold.ttf);
 }
