--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,99 +1,93 @@
-@import 'base/fonts';
-@import 'base/colors';
-@import 'components/header';
-@import 'components/footer';
-@import 'components/tienda';
+@import "base/fonts";
+@import "base/colors";
+@import "components/header";
+@import "components/footer";
+@import "components/tienda";
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
-
 p {
-    margin-top: 2rem;
-    line-height: 1.75em;
+  margin-top: 2rem;
+  line-height: 1.75em;
 }
 
 h1 {
-    font-family: Handletters;
-    font-size: 5rem;
+  font-family: Sansation;
+  font-size: 3.5rem;
 }
 
 h2 {
-    font-size: 1rem;
-    text-align: center;
-    font-weight: bold;
+  font-size: 1rem;
+  text-align: center;
+  font-weight: bold;
 }
 
 .w100 {
-    width: 100%;
+  width: 100%;
 }
 
-.w30{
-    width: 30%;
+.w30 {
+  width: 30%;
 }
 
 .white {
-    color: $white;
-    margin-top: 1em;
+  color: $white;
+  margin-top: 1em;
 }
 
 .intro {
-    padding: 0 10%;
+  padding: 0 10%;
 }
 
 .text-bold {
-    font-weight: bold;
+  font-weight: bold;
 }
-
 
 /* Secciones */
 
 .sectionTitle {
-    color: $very-dark-grey;
-    text-align: center;
-    display: flex;
-    position: relative;
-    justify-content: center;
-    font-weight: 200;
-    padding-bottom: 1rem;
+  color: $primary-pink;
+  text-align: center;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  font-weight: 200;
+  padding-bottom: 1rem;
 }
 
 .space-pre-section {
-    padding: 1.5rem;
+  padding: 1.5rem;
 }
 
 .space-pink {
-    background-color: $pink;
+  background-color: $pink;
 }
 
-.sectionPink {
-    background-color: $pink;
-    padding: 60px 2rem;
+.section {
+  padding: 60px 2rem;
 }
-
 
 /* Mobile Styles */
 
 @media only screen and (max-width: 414px) {
-    
-    h1 {
-        font-size: 3rem;
-    }
+  h1 {
+    font-size: 3rem;
+  }
 
-    .sectionPink {
-       padding: 0px 2rem 20px 2rem;
-    }
+  .sectionPink {
+    padding: 0px 2rem 20px 2rem;
+  }
 
-    .sectionTitle {
-        padding-bottom: 0;
-    }
-
-}    
+  .sectionTitle {
+    padding-bottom: 0;
+  }
+}
