--- a/scss/components/_tienda.scss
+++ b/scss/components/_tienda.scss
@@ -1,18 +1,18 @@
-.carrito {
-  position: fixed;
-  z-index: 3;
-  right: 20px;
-  top: 115px;
-  max-width: 80px;
-}
+// .carrito {
+//   position: fixed;
+//   z-index: 3;
+//   right: 20px;
+//   top: 115px;
+//   max-width: 80px;
+// }
 
 .layer-text {
   color: $very-dark-grey;
   position: absolute;
   top: 60%;
-  -webkit-transform: translate(17%, -65%);
-  -ms-transform: translate(17%, -65%);
-  transform: translate(17%, -65%);
+  -webkit-transform: translate(14%, -65%);
+  -ms-transform: translate(14%, -65%);
+  transform: translate(14%, -65%);
   text-align: center;
   font-size: 0.8rem;
   padding: 10px;
@@ -35,12 +35,12 @@
 
 .layer-top {
   position: absolute;
-  top: 0;
+  top: 15px;
   bottom: 0;
-  left: 0;
+  left: 27px;
   right: 0;
-  height: 100%;
-  width: 100%;
+  height: 95%;
+  width: 86%;
   opacity: 0;
   transition: 0.5s ease;
   background-color: $light-grey;
@@ -51,8 +51,8 @@
 }
 
 .addToCartButton {
-  font-family: Handletters;
-  font-size: 30px;
+  font-family: Sansation;
+  font-size: 20px;
   font-weight: bold;
   padding: 0px 35px;
   border: 1px solid $very-dark-grey;
